--- a/src/components/ui/CardDoutores.astro
+++ b/src/components/ui/CardDoutores.astro
@@ -3,10 +3,11 @@ export interface Props {
   img: string
   title: string
   text: string
+  conselho?: string
   objectTop?: boolean
   background?: string
 }
-const { img, title, text, objectTop, background = '#fff' } = Astro.props
+const { img, title, text, conselho, objectTop, background = '#fff' } = Astro.props
 ---
 
 <article
@@ -18,5 +19,6 @@ const { img, title, text, objectTop, background = '#fff' } = Astro.props
     class={`w-32 lg:w-55 h-32 lg:h-55 rounded-full object-cover ${objectTop ? 'object-top' : ''}`}
 />
   <h2 class="text-lg font-bold text-gray-800 mb-2 text-center pt-2 lg:pt-4">{title}</h2>
-  <p class="text-base font-bold text-gray-600 text-center">{text}</p> 
+  <p class="text-base font-bold text-gray-600 text-center">{text}</p>
+  <p class="text-base font-bold text-gray-600 text-center">{conselho}</p> 
 </article>
