fix: Correções de bugs header/section1

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import astroLogo from '../assets/astro.svg'
 import background from '../assets/background.svg'
 ---
 
-<header class="bg-gradient-to-r from-red-500 to-pink-500 py-6 shadow-md">
+<header class="bg-gradient-to-r from-red-500 to-pink-500 py-6 shadow-md sticky top-0 z-50">
   <div class="container mx-auto flex items-center justify-center gap-4">
     <h1 class="text-white text-2xl font-semibold">Exemplo de Header com</h1>
     <img
