fix: Ajustes do id section servicos

--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -26,7 +26,7 @@ import relogioicon from "../../assets/relogioicon.svg";
     <ul class="hidden md:flex space-x-8 font-medium">
       <li><a href="/#Home" class="hover:text-teal-900 transition-colors">Início</a></li>
       <li><a href="/#Section2" class="hover:text-teal-900 transition-colors">Quem Somos</a></li>
-      <li><a href="/#Serviços" class="hover:text-teal-900 transition-colors">Serviços</a></li>
+      <li><a href="/#Servicos" class="hover:text-teal-900 transition-colors">Serviços</a></li>
       <li><a href="/CorpoClinico" class="hover:text-teal-900 transition-colors">Corpo Clínico</a></li>
     </ul>
 
@@ -38,8 +38,8 @@ import relogioicon from "../../assets/relogioicon.svg";
       </div>
     </div>
 
-    <a href="#" class="hidden md:block ml-4">
-      <button class="border border-white hover:bg-teal-600 transition-colors text-white font-medium py-1 px-5 rounded-3xl">Agendar Consulta</button>
+    <a href="https://wa.me/5582999689119" class="hidden md:block ml-4">
+      <button class="cursor-pointer border border-white hover:bg-teal-600 transition-colors text-white font-medium py-1 px-5 rounded-3xl">Agendar Consulta</button>
     </a>
   </nav>
 
@@ -48,7 +48,7 @@ import relogioicon from "../../assets/relogioicon.svg";
       <ul class="flex flex-col space-y-3">
       <li><a href="/#Home" class="block py-2 hover:text-teal-900 transition-colors">Início</a></li>
       <li><a href="/#Section2" class="block py-2 hover:text-teal-900 transition-colors">Quem Somos</a></li>
-      <li><a href="/#Serviços" class="block py-2 hover:text-teal-900 transition-colors">Serviços</a></li>
+      <li><a href="/#Servicos" class="block py-2 hover:text-teal-900 transition-colors">Serviços</a></li>
       <li><a href="/CorpoClinico" class="block py-2 hover:text-teal-900 transition-colors">Corpo Clínico</a></li>
       </ul>
 
@@ -66,9 +66,8 @@ import relogioicon from "../../assets/relogioicon.svg";
         </div>
       </div>
 
-      <div class="mt-4 pt-3"><a href="#" class="block">
-      <button class="w-full border border-white hover:bg-teal-600 transition-colors text-white font-medium py-2 px-4 rounded-3xl">Agendar Consulta</button>
-        </a>
+      <div class="mt-4 pt-3" class="block">
+     <a href="https://wa.me/5582999689119"><button class="w-full border border-white hover:bg-teal-600 transition-colors text-white font-medium py-2 px-4 rounded-3xl">Agendar Consulta</button></a>
       </div>
     </div>
   </div>
