feat: Criar novas páginas de Termos e padronizar o código

--- a/src/components/CorpoClinico/index.astro
+++ b/src/components/CorpoClinico/index.astro
@@ -1,6 +1,5 @@
 ---
-import CardDoutores from "../ui/CardDoutores.astro"
-
+import CardDoutores from "../../components/ui/Cards/CardDoutores.astro"
 import diogo from "../../assets/especialistas/Diogo-Bento.png"
 import eliane from "../../assets/especialistas/Eliane-Calumby.jpg"
 import victor from "../../assets/especialistas/Victor-Hugo.png"
@@ -24,7 +23,7 @@ import ubirajara from "../../assets/especialistas/Ubirajara_ultrassonografista.p
 import victoria from "../../assets/especialistas/Victoria_nutri.png"
 import daise from "../../assets/especialistas/Daise_Nicacio.png"
 import larissa from "../../assets/especialistas/Larissa_Tenorio.jpeg"
-import DescriptionSection from "../ui/DescriptionSection.astro"
+import DescriptionSection from "../../components/ui/DescricaoSection/DescriptionSection.astro"
 import IconePlus from '../../assets/plus.svg'
 
 
