--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -25,7 +25,7 @@ import relogioicon from "../../assets/relogioicon.svg";
 
     <ul class="hidden md:flex space-x-8 font-medium">
       <li><a href="/#Home" class="hover:text-teal-900 transition-colors">Início</a></li>
-      <li><a href="/#Section2" class="hover:text-teal-900 transition-colors">Quem Somos</a></li>
+      <li><a href="/QuemSomos" class="hover:text-teal-900 transition-colors">Quem Somos</a></li>
       <li><a href="/#Servicos" class="hover:text-teal-900 transition-colors">Serviços</a></li>
       <li><a href="/CorpoClinico" class="hover:text-teal-900 transition-colors">Corpo Clínico</a></li>
     </ul>
