--- a/src/components/Section1/index.astro
+++ b/src/components/Section1/index.astro
@@ -32,13 +32,13 @@ import "keen-slider/keen-slider.min.css";
           avançada e atendimento humanizado.</p>
         <div class="flex flex-col sm:flex-row gap-3 sm:gap-5 w-full sm:w-auto">
           <a
-            href="#contato"
+            href="https://wa.me/5582999689119"
             class="bg-gradient-to-r from-[#37B5A6] to-[#0B7164] text-white text-sm sm:text-base font-bold py-2 px-6 sm:px-8 rounded-3xl transition-colors"
           >
             Agende uma Consulta
           </a>
           <a
-            href="#servicos"
+            href="/#Servicos"
             class="hidden sm:block border border-white text-white text-sm sm:text-base font-bold py-2 px-4 rounded-3xl hover:bg-white hover:text-[#0B7164] transition-colors"
           >
             Nossos Serviços
