--- a/src/components/Section2/index.astro
+++ b/src/components/Section2/index.astro
@@ -1,15 +1,13 @@
 ---
-import CardSaibaMais from "../../components/ui/cardSaibaMais/cardSaibaMais.astro"
-import CardEspecialidades from "../../components/ui/cardEspecialidade/cardEspecialidades.astro"
-
-import imgVector from "../../assets/vectorSection2.svg";
+import CardEspecialidades from "../ui/Cards/cardEspecialidades.astro"
+import DescriptionSection from '../../components/ui/DescricaoSection/DescriptionSection.astro';
+import IconePlus from '../../assets/plus.svg'
 import imgDepilacao from "../../assets/backgroundsSection2/img_depilação_a_laser.avif";
 import imgUltrassom from "../../assets/backgroundsSection2/img_ultrassonografia.avif";
 import imgDermato from "../../assets/backgroundsSection2/img_dermatologista.avif";
 import imgClinico from "../../assets/backgroundsSection2/img_clinica_geral.avif";
 import iconDepilacao from "../../assets/cardsIcons/icon1_services.svg";
 import iconUltrassom from "../../assets/cardsIcons/icon2_services.svg";
-import iconDermato from "../../assets/cardsIcons/icon3_services.svg";
 import iconClinico from "../../assets/cardsIcons/icon4_services.svg";
 import iconFisio from "../../assets/cardsIcons/icon5_services.svg";
 import iconExamesLaboratorial from "../../assets/cardsIcons/icon6_services.svg";
@@ -26,13 +24,12 @@ section {
 </style>
 
 <section id="Servicos" class="flex flex-col items-center justify-center px-[8px] py-[50px] sm:py-[100px] gap-14 ">
-   
-        <div class="flex justify-center text-center">
-            <h1 class="text-[32px]/[48px] md:text-[40px] font-semibold text-[#031E2D]">
-                Nossos Serviços
-            </h1>
-        </div>
-        
+    
+    <DescriptionSection 
+    img={IconePlus.src}
+    label='QUEM SOMOS'
+    title='Nossos Serviços'
+    />   
 
     <div class="flex flex-wrap justify-center xl:grid xl:grid-cols-3 2xl:grid 2xl:grid-cols-3 sm:p-[15px] gap-4 sm:gap-8">
         <div onclick="window.location.href = '#corpo-clinico'" style="cursor:pointer">
