--- a/src/components/Section4/index.astro
+++ b/src/components/Section4/index.astro
@@ -1,6 +1,6 @@
 ---
-import Button from '../../components/ui/Button.astro';
-import DescriptionSection from '../../components/ui/DescriptionSection.astro';
+import Button from '../../components/ui/Button/Button.astro';
+import DescriptionSection from '../../components/ui/DescricaoSection/DescriptionSection.astro';
 import IconePlus from '../../assets/plus.svg'
 import Recepcao from '../../assets/ImgsClinica/recepcao.svg';
 import Sala from '../../assets/ImgsClinica/sala.svg';
