--- a/src/components/QuemSomos/index.astro
+++ b/src/components/QuemSomos/index.astro
@@ -1,5 +1,6 @@
 ---
-import DescriptionSection from '../../components/ui/DescriptionSection.astro';
+import Section1 from '../../components/Section1/index.astro'
+import DescriptionSection from '../../components/ui/DescricaoSection/DescriptionSection.astro';
 import IconePlus from '../../assets/plus.svg'
 import Corredor1 from '../../assets/ImgsClinica/corredor1.svg';
 import Corredor2 from '../../assets/ImgsClinica/corredor2.svg';
@@ -9,14 +10,17 @@ import Recepcao1 from '../../assets/ImgsClinica/recepcao1.svg';
 import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
 ---
 
-<section class="flex flex-col items-center justify-center py-10 sm:py-16 gap-6 max-w-7xl mx-auto px-6 sm:px-7 lg:px-8 mt-18">
+<Section1 />
+
+<section id="quemsomos" class="flex flex-col items-center justify-center py-10 sm:py-16 gap-6 max-w-7xl mx-auto px-6 sm:px-7 lg:px-8 mt-10">
+    
     <DescriptionSection 
     img={IconePlus.src}
     label='QUEM SOMOS'
     title='Conheça a Sallute Clínica Médica'
     />
-    <div class="flex flex-col gap-2 md:gap-3 lg:gap-5 px-2 lg:px-6">
-
+    
+    <div id="historia" class="flex flex-col gap-2 md:gap-3 lg:gap-5 px-2 lg:px-6">
         <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-15 lg:mt-25 mb-4 w-full text-left">
             Nossa História</h2>
         <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
@@ -27,21 +31,23 @@ import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
             Hoje, somos mais de 20 profissionais atuando em conjunto para oferecer um cuidado integral. Expandimos nossos serviços e agora contamos também com exames de imagem, como ultrassonografia e outros, trazendo ainda mais comodidade e agilidade para quem confia em nosso trabalho.</p>
         <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
             Seguimos firmes em nossa missão de crescer com responsabilidade, nos atualizando constantemente, buscando novas formas de acolher e tratar, sem perder o toque humano que nos diferencia. Cada paciente que passa pela Sallute leva um pouco de nós e deixa um pouco de si — e é isso que nos torna uma clínica tão especial.</p>
-                        
-                        
+    </div>
+    
+    <div class="flex flex-col gap-2 md:gap-3 lg:gap-5 px-2 lg:px-6">                
         <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-8 sm:mt-12 lg:mt-15 w-full text-left">
             Missão</h2>
         <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
             Promover saúde e bem-estar com acolhimento, excelência técnica e atendimento humanizado, oferecendo serviços de qualidade que atendam às necessidades de cada paciente.</p>
-            
+    </div>        
 
+    <div class="flex flex-col gap-2 md:gap-3 lg:gap-5 px-2 lg:px-6">
         <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-8 sm:mt-12 lg:mt-15 w-full text-left">
             Visão</h2>
-        <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
+        <p id="valores" class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
             Ser referência regional em atendimento multiprofissional e exames de imagem, reconhecida pela ética, inovação e cuidado integral com o ser humano.</p>
-                
-                
-        <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-8 sm:mt-12 lg:mt-15 w-full text-left">
+
+
+            <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-8 sm:mt-12 lg:mt-15 w-full text-left">
             Valores</h2>
         <ul class="list-disc pl-5 space-y-1 text-gray-700 text-justify leading-relaxed text-base sm:text-lg lg:text-2xl w-full mb-4">
             <li>Humanização no atendimento;</li>
@@ -57,7 +63,7 @@ import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
 </section>
         
             
-<section class="flex flex-col items-center justify-center py-10 sm:py-16 gap-12 sm:gap-16 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+<section id="estrutura" class="flex flex-col items-center justify-center py-10 sm:py-16 gap-12 sm:gap-16 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <DescriptionSection 
         img={IconePlus.src}
         label='NOSSOS AMBIENTES'
@@ -87,22 +93,6 @@ import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
         <div class="relative w-full lg:w-4/4">
             <img src={Sala.src} alt="Recepção da Clínica" class="rounded-2xl w-full h-auto object-cover" />
         </div>
-    </div>
-        
-    <div class="flex flex-col w-full items-center justify-center gap-4 lg:gap-5 mt-10 px-4">
-        
-        <div class="flex flex-row w-full items-center justify-center gap-4 lg:gap-5">
-            <img src={Fachada.src} alt="Imagem da Fachada"      class="rounded-xs lg:rounded-xl w-1/3 h-full object-cover" />
-            <img src={Recepcao1.src} alt="Imagem da Recepção"   class="rounded-xs lg:rounded-xl w-1/3 h-full object-cover" />
-            <img src={Recepcao2.src} alt="Imagem da Recepção"   class="rounded-xs lg:rounded-xl w-1/3 h-full object-cover" />
-        </div>
-        
-        <div class="flex flex-row w-full items-center justify-center gap-4 lg:gap-5">
-            <img src={Corredor1.src} alt="Imagem Corredor"   class="rounded-xs lg:rounded-xl w-1/3 h-full object-cover" />
-            <img src={Sala.src} alt="Imagem Sala de coletas" class="rounded-xs lg:rounded-xl w-1/3 h-full object-cover" />
-            <img src={Corredor2.src} alt="Imagem Corredor"   class="rounded-xs lg:rounded-xl w-1/3 h-full object-cover" />
-        </div>
-        
     </div>
 
 </section>
