--- a/src/components/Section3/index.astro
+++ b/src/components/Section3/index.astro
@@ -1,31 +1,30 @@
 ---
-import CardDoutores from "./ui/CardDoutores.astro"
-
-import diogo from "../assets/especialistas/Diogo-Bento.png"
-import eliane from "../assets/especialistas/Eliane-Calumby.jpg"
-import victor from "../assets/especialistas/Victor-Hugo.png"
-import ricardo from "../assets/especialistas/Ricardo-Macena.jpg"
-import cicero from "../assets/especialistas/Cicero_ultrassonografista.png"
-import eduardo from "../assets/especialistas/Eduardo_urologista.png"
-import elfrida from "../assets/especialistas/Elfrida_neuropsi.png"
-import fabian from "../assets/especialistas/Fabian_cardio.png"
-import irwins from "../assets/especialistas/Irwins_urologista.png"
-import jandira from "../assets/especialistas/Jandira_fono.png"
-import jose from "../assets/especialistas/Jose_mastologia.png"
-import juarez from "../assets/especialistas/Juarez_fisioterapeuta.png"
-import julia from "../assets/especialistas/Julia_gineco.png"
-import juliana from "../assets/especialistas/Juliana_fisio.png"
-import lilian from "../assets/especialistas/Lilian_alergista.png"
-import ricardo_neuro from "../assets/especialistas/Ricardo_neuro.png"
-import solange from "../assets/especialistas/Solange_clinica.png"
-import suzane from "../assets/especialistas/Suzane_gineco.png"
-import thaysa from "../assets/especialistas/Thaysa_pneumologia.png"
-import ubirajara from "../assets/especialistas/Ubirajara_ultrassonografista.png"
-import victoria from "../assets/especialistas/Victoria_nutri.png"
-import daise from "../assets/especialistas/Daise_Nicacio.png"
-import larissa from "../assets/especialistas/Larissa_Tenorio.jpeg"
-
-import Cruz from "../assets/plus.svg"
+import CardDoutores from "../../components/ui/Cards/CardDoutores.astro"
+import DescriptionSection from '../../components/ui/DescricaoSection/DescriptionSection.astro';
+import IconePlus from '../../assets/plus.svg'
+import diogo from "../../assets/especialistas/Diogo-Bento.png"
+import eliane from "../../assets/especialistas/Eliane-Calumby.jpg"
+import victor from "../../assets/especialistas/Victor-Hugo.png"
+import ricardo from "../../assets/especialistas/Ricardo-Macena.jpg"
+import cicero from "../../assets/especialistas/Cicero_ultrassonografista.png"
+import eduardo from "../../assets/especialistas/Eduardo_urologista.png"
+import elfrida from "../../assets/especialistas/Elfrida_neuropsi.png"
+import fabian from "../../assets/especialistas/Fabian_cardio.png"
+import irwins from "../../assets/especialistas/Irwins_urologista.png"
+import jandira from "../../assets/especialistas/Jandira_fono.png"
+import jose from "../../assets/especialistas/Jose_mastologia.png"
+import juarez from "../../assets/especialistas/Juarez_fisioterapeuta.png"
+import julia from "../../assets/especialistas/Julia_gineco.png"
+import juliana from "../../assets/especialistas/Juliana_fisio.png"
+import lilian from "../../assets/especialistas/Lilian_alergista.png"
+import ricardo_neuro from "../../assets/especialistas/Ricardo_neuro.png"
+import solange from "../../assets/especialistas/Solange_clinica.png"
+import suzane from "../../assets/especialistas/Suzane_gineco.png"
+import thaysa from "../../assets/especialistas/Thaysa_pneumologia.png"
+import ubirajara from "../../assets/especialistas/Ubirajara_ultrassonografista.png"
+import victoria from "../../assets/especialistas/Victoria_nutri.png"
+import daise from "../../assets/especialistas/Daise_Nicacio.png"
+import larissa from "../../assets/especialistas/Larissa_Tenorio.jpeg"
 
 const doctors = [
   { img: diogo.src, title: "Psiquiatra", text: "Dr. Diogo Bento", objectTop: true },
@@ -56,22 +55,19 @@ const doctors = [
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
 
-<section id="Section3" class="w-full py-20 bg-[#F4F7FF]">
-
 <section id="corpo-clinico" class="w-full py-20 bg-[#F4F7FF]">
 
   <div class="container mx-auto px-4 max-w-5xl">
     <div class="flex justify-center items-center">
-      <div class="flex items-center gap-2">
-        <img src={Cruz.src} alt="Vector" class="w-4" />
-        <p class="text-lg text-center font-bold max-w-3xl mx-auto bg-gradient-to-r from-[#37B5A6] to-[#0B7164] bg-clip-text text-transparent">CORPO CLÍNICO</p>
-      </div>
+      
+        <DescriptionSection 
+          img={IconePlus.src}
+          label='CORPO CLÍNICO'
+          title='Conheça Nosso Corpo Clínico'
+          description='Nossa equipe de médicos especializados se dedica a fornecer atendimento personalizado em uma ampla variedade de áreas médicas.'
+        />
+
     </div>
-    <h1 class="text-3xl md:text-5xl font-inter font-semibold mb-6 text-center text-[#031E2D]">Conheça Nosso Corpo Clínico</h1>
-    <p class="text-xs sm:text-sm lg:text-base text-gray-600 font-inter mb-6 text-center max-w-lg mx-auto">
-      Nossa equipe de médicos especializados se dedica a fornecer atendimento
-      personalizado em uma ampla variedade de áreas médicas.
-    </p>
   </div>
   <div class="mt-10">
     <div class="swiper">
