--- a/src/components/Servicos/index.astro
+++ b/src/components/Servicos/index.astro
@@ -1,15 +1,11 @@
 ---
-import DescriptionSection from '../../components/ui/DescriptionSection.astro';
+import Section1 from '../../components/Section1/index.astro'
+import DescriptionSection from '../../components/ui/DescricaoSection/DescriptionSection.astro';
 import IconePlus from '../../assets/plus.svg'
-
-import slideImage from "../../assets/ImgsSection1/img2.jpg";
-
-import CardDoutores from '../../components/ui/CardDoutores.astro'
+import CardDoutores from '../../components/ui/Cards/CardDoutores.astro'
 import Ultrassonografista_1 from '../../assets/especialistas/Cicero_ultrassonografista.png'
 import Ultrassonografista_2 from '../../assets/especialistas/Ubirajara_ultrassonografista.png'
-
 import Fisioterapeuta_1 from '../../assets/especialistas/Juarez_fisioterapeuta.png'
-
 import LaserDepilacao from '../../assets/especialistas/Juliana_fisio.png'
 import { object } from 'astro:schema';
 
@@ -27,27 +23,21 @@ const laser = [
   { img: LaserDepilacao.src, title: "Fisioterapeuta", text: "Dra. Juliana Oliveira", conselho:"CREFITO: 351313-F "}
 ];
 ---
-<section class="w-full flex justify-center items-center min-h-screen">
-  <img 
-    src={slideImage.src} 
-    alt="Imagem dos serviços da clínica" 
-    class="rounded-lg object-cover w-full h-[40vh] sm:h-[50vh] md:h-[60vh] lg:h-[70vh] xl:h-[80vh] max-h-screen"
-    style="aspect-ratio: 16/7;"
-    loading="lazy"
-  />
-</section>
-<section class="flex flex-col items-center justify-center py-8 sm:py-10 md:py-14 lg:py-16 gap-6 max-w-7xl mx-auto px-3 sm:px-5 md:px-8 lg:px-8 mt-10">
+
+<Section1 />
+
+<section id="ultrassonografia" class="flex flex-col items-center justify-center py-8 sm:py-10 md:py-14 lg:py-16 gap-6 max-w-7xl mx-auto px-3 sm:px-5 md:px-8 lg:px-8">
   <DescriptionSection 
     img={IconePlus.src}
     label='NOSSOS SERVIÇOS'
     title='Conheça Nossos Serviços'
   />
   <!-- Seção de serviços da clínica médica -->
-  <div class="flex flex-col gap-8 md:gap-10 lg:gap-12 w-full">
+  <div class="flex flex-col mt-10 gap-8 md:gap-10 lg:gap-12 w-full">
     <!-- Ultrassonografia -->
     <div class="flex flex-col lg:flex-row lg:items-start gap-6 bg-white p-4 sm:p-6">
       <!-- Texto à esquerda -->   
-      <div id="ultrassonografia" class="flex-1 min-w-0">
+      <div class="flex-1 min-w-0">
         <h2 class="text-xl sm:text-2xl md:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-4 mb-3 text-left">
           Ultrassonografia
         </h2>
@@ -79,7 +69,7 @@ const laser = [
           <li>ARTICULAÇÃO JOELHO;</li>
           <li>ARTICULAÇÃO TORNOZELO;</li>
           <li>QUADRIL;</li>
-          <li>PÉ.</li>
+          <li id="fisioterapia">PÉ.</li>
         </ul>
       </div>
       <!-- Fotos à direita -->
@@ -93,7 +83,7 @@ const laser = [
       </div>
     </div>
     <!-- Fisioterapia -->
-    <div id="fisioterapia" class="flex flex-col lg:flex-row lg:items-start gap-6 bg-white p-4 sm:p-6">
+    <div class="flex flex-col lg:flex-row lg:items-start gap-6 bg-white p-4 sm:p-6">
       <div class="flex-1 min-w-0">
         <h2 class="text-xl sm:text-2xl md:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-4 mb-3 text-left">
           Fisioterapia
@@ -107,7 +97,7 @@ const laser = [
           <li>FISIOTERAPIA ESPORTIVA;</li>
           <li>FISIOTERAPIA NEUROLÓGICA;</li>
           <li>FISIOTERAPIA RESPIRATÓRIA;</li>
-          <li>FISIOTERAPIA GERIÁTRICA;</li>
+          <li id="depilacao">FISIOTERAPIA GERIÁTRICA;</li>
         </ul>
       </div>
       <div class="flex flex-col items-center gap-2 mt-6 md:mt-0 w-full lg:w-auto lg:ml-6">
@@ -120,7 +110,7 @@ const laser = [
       </div>
     </div>
     <!-- Depilação a Laser -->
-    <div id="depilacao" class="flex flex-col lg:flex-row lg:items-start gap-6 bg-white p-4 sm:p-6">
+    <div class="flex flex-col lg:flex-row lg:items-start gap-6 bg-white p-4 sm:p-6">
       <div class="flex-1 min-w-0">
         <h2 class="text-xl sm:text-2xl md:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-4 mb-3 text-left">
           Depilação a Laser
