--- a/src/pages/QuemSomos.astro
+++ b/src/pages/QuemSomos.astro
@@ -1,8 +1,8 @@
 ---
-import HeaderSalute from '../components/Header/index.astro'
-import Footer from '../components/Footer.astro'
 import Layout from '../layouts/Layout.astro'
+import HeaderSalute from '../components/Header/index.astro'
 import SegundaPagina from '../components/QuemSomos/index.astro'
+import Footer from '../components/Footer/index.astro'
 ---
 
 <Layout>
