--- a/src/pages/TermosUso.astro
+++ b/src/pages/TermosUso.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import HeaderSalute from '../components/Header/index.astro'
-import QuartaPagina from '../components/Servicos/index.astro'
+import Termos from '../components/TermoUso/index.astro'
 import Footer from '../components/Footer/index.astro'
 ---
 
 <Layout>
 	<HeaderSalute />
-	<QuartaPagina />
+	<Termos />
 	<Footer />
 </Layout>
