--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
+import Layout from '../layouts/Layout.astro'
 import HeaderSalute from '../components/Header/index.astro'
 import Section1 from '../components/Section1/index.astro'
-import Section4 from '../components/Section4/index.astro'
-import Footer from '../components/Footer.astro'
-import Layout from '../layouts/Layout.astro'
-import QuintaSection from '../components/QuintaSection.astro'
-import Section3 from '../components/Section3.astro'
 import Section2 from '../components/Section2/index.astro'
+import Section3 from '../components/Section3/index.astro'
+import Section4 from '../components/Section4/index.astro'
+import Section5 from '../components/Section5/index.astro'
+import Footer from '../components/Footer/index.astro'
 ---
 
 <Layout>
@@ -15,6 +15,6 @@ import Section2 from '../components/Section2/index.astro'
   	<Section2 />
   	<Section3 />
 	<Section4 />
-	<QuintaSection />
+	<Section5 />
 	<Footer />
 </Layout>
