fix: Correção na descrição da página "Corpo Clínico"

--- a/src/components/CorpoClinico/index.astro
+++ b/src/components/CorpoClinico/index.astro
@@ -58,9 +58,9 @@ const doctors = [
     
     <DescriptionSection 
         img={IconePlus.src}
-        label='NOSSOS AMBIENTES'
-        title='Conforto, Segurança e Atendimento Humanizado'
-        description='A Clínica conta com um ambiente moderno e acolhedor, pensado para oferecer conforto, bem-estar e uma experiência humanizada aos pacientes.'
+        label='NOSSOS MÉDICOS'
+        title='Conheça Nossos Médicos Especialistas'
+        description='Nossa equipe de médicos especializados se dedica a fornecer atendimento personalizado em uma ampla variedade de áreas médicas.'
         />
     <div class="mt-10">
       <div class="flex flex-wrap justify-center gap-4">
