fix: Correções das imagens do Footer e Section1

--- a/src/components/Section1/index.astro
+++ b/src/components/Section1/index.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 import slideImage from "../../assets/ImgsSection1/img1.jpg";
 import slideImage2 from "../../assets/ImgsSection1/img2.jpg";
 import slideImage3 from "../../assets/ImgsSection1/img3.jpg";
-import imagemcta from "../../assets/ImgsSection1/imagemcta.svg";
+import imagemcta from "../../assets/frase2.svg";
 import "keen-slider/keen-slider.min.css";
 ---
 
