--- a/src/components/Footer/index.astro
+++ b/src/components/Footer/index.astro
@@ -6,7 +6,7 @@ import Iconinstagram from "../../assets/socialbuttons/instagram.svg";
 import Icontelefone from "../../assets/socialbuttons/telefone.svg";
 import Iconemail from "../../assets/socialbuttons/email.svg";
 import Iconrocket from "../../assets/logo-rocket.svg";
-import Frase2 from "../../assets/Frase2.svg";
+import Frase2 from "../../assets/frase2.svg";
 import LogoSalluteBranco from "../../assets/salluteLogoBranco.svg";
 ---
 
@@ -49,10 +49,10 @@ import LogoSalluteBranco from "../../assets/salluteLogoBranco.svg";
           <a href="https://www.facebook.com/sallute.penedo/" class="bg-teal-500 hover:bg-teal-400 p-2 rounded-full">
             <img src={Iconfacebook.src} alt="Facebook" class="w-5 h-5" />
           </a>
-          <a href="https://wa.me/5582999689119" class="bg-teal-500 hover:bg-teal-400 p-2 rounded-full">
+          <a href="tel:+5582999689119" class="bg-teal-500 hover:bg-teal-400 p-2 rounded-full">
             <img src={Icontelefone.src} alt="Telefone" class="w-5 h-5" />
           </a>
-          <a href="#E-mail" class="bg-teal-500 hover:bg-teal-400 p-2 rounded-full">
+          <a href="mailto:contato@salluteclinica.com.br" class="bg-teal-500 hover:bg-teal-400 p-2 rounded-full">
             <img src={Iconemail.src} alt="Email" class="w-5 h-5" />
           </a>
         </div>
